--- a/MonoGame/NeonPartyGamesController.Android/NeonPartyGamesController.csproj
+++ b/MonoGame/NeonPartyGamesController.Android/NeonPartyGamesController.csproj
@@ -54,6 +54,7 @@
     <Reference Include="OpenTK-1.0" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
     <Reference Include="MonoGame.Framework">
