--- a/MonoGame/NeonPartyGamesController.Android/packages.config
+++ b/MonoGame/NeonPartyGamesController.Android/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="12.0.3-beta2" targetFramework="monoandroid90" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="monoandroid90" />
 </packages>
