Added keystore file reference

--- a/MonoGame/NeonPartyGamesController.Android/NeonPartyGamesController.csproj
+++ b/MonoGame/NeonPartyGamesController.Android/NeonPartyGamesController.csproj
@@ -22,6 +22,11 @@
     <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <MonoGamePlatform>Android</MonoGamePlatform>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
+    <AndroidKeyStore>true</AndroidKeyStore>
+    <AndroidSigningKeyStore>C:\Users\Austin\AppData\Local\Xamarin\Mono for Android\Keystore\Romans_I_XVI_Gaming\npgcontroller.keystore</AndroidSigningKeyStore>
+    <AndroidSigningStorePass>Britt08</AndroidSigningStorePass>
+    <AndroidSigningKeyAlias>asojka09</AndroidSigningKeyAlias>
+    <AndroidSigningKeyPass>Britt08</AndroidSigningKeyPass>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,6 +38,11 @@
     <WarningLevel>4</WarningLevel>
     <AndroidUseSharedRuntime>True</AndroidUseSharedRuntime>
     <AndroidLinkMode>None</AndroidLinkMode>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
+    <MandroidI18n />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
