--- a/MonoGame/NeonPartyGamesController.Android/Properties/AndroidManifest.xml
+++ b/MonoGame/NeonPartyGamesController.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="NeonPartyGamesController.NeonPartyGamesController" android:versionCode="1" android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.romansixvi.npgcontroller" android:versionCode="5" android:versionName="1.0.5" android:installLocation="auto">
 	<uses-sdk />
-	<application android:label="NeonPartyGamesController"></application>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="Neon Party Games Controller"></application>
 </manifest>
