--- a/MonoGame/NeonPartyGamesController.Android/NeonPartyGamesController.csproj
+++ b/MonoGame/NeonPartyGamesController.Android/NeonPartyGamesController.csproj
@@ -82,6 +82,7 @@
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidResource Include="Resources\Drawable\IconRound.png" />
     <AndroidResource Include="Resources\Values\Strings.xml" />
   </ItemGroup>
   <ItemGroup>
