--- a/MonoGame/NeonPartyGamesController.UWP/NeonPartyGamesController.csproj
+++ b/MonoGame/NeonPartyGamesController.UWP/NeonPartyGamesController.csproj
@@ -119,13 +119,19 @@
       <Link>Content\textures\spritesheet.json</Link>
     </EmbeddedResource>
     <Content Include="Properties\Default.rd.xml" />
+    <Content Include="Assets\AppIcon.scale-200.png" />
+    <Content Include="Assets\AppIcon.targetsize-256_altform-unplated.png" />
+    <Content Include="Assets\AppIcon.targetsize-48_altform-unplated.png" />
+    <Content Include="Assets\LargeTile.scale-200.png" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
+    <Content Include="Assets\LockScreenLogo.scale-400.png" />
+    <Content Include="Assets\MediumTile.scale-200.png" />
+    <Content Include="Assets\SmallTile.scale-200.png" />
+    <Content Include="Assets\SplashScreen.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="Assets\SplashScreen.scale-400.png" />
+    <Content Include="Assets\WideTile.scale-200.png" />
+    <Content Include="Assets\StoreLogo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
