--- a/MonoGame/NeonPartyGamesController.Android/Properties/AndroidManifest.xml
+++ b/MonoGame/NeonPartyGamesController.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.romansixvi.npgcontroller" android:versionCode="5" android:versionName="1.0.5" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.romansixvi.npgcontroller" android:versionCode="1000005" android:versionName="1.0.5" android:installLocation="auto">
 	<uses-sdk android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
