Minor icon additions

--- a/MonoGame/NeonPartyGamesController.iOS/Info.plist
+++ b/MonoGame/NeonPartyGamesController.iOS/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>NeonPartyGamesController</string>
+	<string>Neon Party Games Controller</string>
 	<key>CFBundleIconFiles</key>
 	<array>
 		<string>GameThumbnail.png</string>
