UWP | Building for store upload

--- a/MonoGame/NeonPartyGamesController.UWP/NeonPartyGamesController.csproj
+++ b/MonoGame/NeonPartyGamesController.UWP/NeonPartyGamesController.csproj
@@ -23,6 +23,13 @@
     <MonoGamePlatform>WindowsStoreApp</MonoGamePlatform>
     <PackageCertificateThumbprint>E144534F86902FBB36D32884507B570981C6A5A1</PackageCertificateThumbprint>
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
+    <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <GenerateTestArtifacts>True</GenerateTestArtifacts>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
+    <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
