--- a/MonoGame/NeonPartyGamesController.Android/packages.config
+++ b/MonoGame/NeonPartyGamesController.Android/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="12.0.3-beta2" targetFramework="monoandroid90" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="monoandroid90" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="monoandroid90" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="monoandroid90" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.3" targetFramework="monoandroid90" />
