--- a/MonoGame/NeonPartyGamesController.Android/packages.config
+++ b/MonoGame/NeonPartyGamesController.Android/packages.config
@@ -31,4 +31,5 @@
   <package id="Xamarin.Android.Support.VersionedParcelable" version="28.0.0.3" targetFramework="monoandroid90" />
   <package id="Xamarin.Android.Support.ViewPager" version="28.0.0.3" targetFramework="monoandroid90" />
   <package id="Xamarin.Essentials" version="1.3.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Legacy.OpenTK" version="1.0.2" targetFramework="monoandroid90" />
 </packages>
