--- a/MonoGame/NeonPartyGamesController.Android/NeonPartyGamesController.csproj
+++ b/MonoGame/NeonPartyGamesController.Android/NeonPartyGamesController.csproj
@@ -121,6 +121,11 @@
       <Version>1.0.2</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\Values\Colors.xml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <Import Project="..\NeonPartyGamesControllerShared\NeonPartyGamesControllerShared.projitems" Label="Shared" />
