--- a/MonoGame/NeonPartyGamesController.Android/Properties/AndroidManifest.xml
+++ b/MonoGame/NeonPartyGamesController.Android/Properties/AndroidManifest.xml
@@ -4,5 +4,5 @@
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="Neon Party Games Controller"></application>
+	<application android:label="Neon Party Games Controller" android:icon="@mipmap/icon" android:banner="@drawable/Banner"></application>
 </manifest>
